--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>re-frame-tic-tac-toe</title>
+    <title>re-frame Tic Tac Toe</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -11,6 +11,7 @@
       re-frame-tic-tac-toe is a JavaScript app. Please enable JavaScript to continue.
     </noscript>
     <div id="app"></div>
-    <script src="js/compiled/app.js"></script>
+    <script src="js/compiled/shared.js"></script>
+    <script src="js/compiled/main.js"></script>
   </body>
 </html>
