Add modal with replay at game over

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>re-frame Tic Tac Toe</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/modal.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <noscript>
